webapp/static/css/style.css
html, body {
  margin: 0;
  padding: 0;
  height: 100%;
  width: 100%;
  font-family: sans-serif;
}

#container {
  display: flex;
  height: 100vh;
  width: 100vw;
  overflow: hidden;
}

#mynetwork {
  flex: 1 1 70%;
  height: 100%;
  border-right: 1px solid #ccc;
}

#sidebar {
  flex: 0 0 30%;
  padding: 16px;
  box-sizing: border-box;
  height: 100%;
  overflow-y: auto;
  border-left: 1px solid #ccc;
  background: #f9f9f9;
}

#info {
  width: 300px;
  max-width: 50%;
  overflow-wrap: break-word;
  overflow-y: auto;
  resize: horizontal;
  border: 1px solid #ccc;
  padding: 10px;
}

